# AnonAi

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md
src/: AiClient.cpp  AiClient.hpp  AnonAIPlugin.cpp  ChatHistory.cpp  ChatHistory.hpp  Dialogs.cpp  Dialogs.hpp  JsonUtil.cpp  JsonUtil.hpp  PluginInterface.hpp  ScintillaMini.hpp  Settings.cpp  Settings.hpp  Utf.cpp  Utf.hpp
